# fastapi-ml-example

./: .pre-commit-config.yaml  Dockerfile  README.md  ml_model_dump.py  pyproject.toml
fastapi_ml_example/: __main__.py  application.py  asgi.py  config.py  dependencies.py  ml_models.py
fastapi_ml_example/api/: __init__.py  predictions.py  root.py
fastapi_ml_example/schemes/: __init__.py  predictions.py
load_testing/: README.md  gen.py  locustfile.py
tests/: conftest.py
